# alg-lib

./: .gitignore  AdjacencyListEdgeReader_8cpp.html  AdjacencyListEdgeReader_8hpp.html  AdjacencyListEdgeReader_8hpp_source.html  AdjacencyList_8cpp.html  AdjacencyList_8hpp.html  AdjacencyList_8hpp_source.html  AdjacencyMatrixEdgeReader_8cpp.html  AdjacencyMatrixEdgeReader_8hpp.html  AdjacencyMatrixEdgeReader_8hpp_source.html  AdjacencyMatrix_8cpp.html  AdjacencyMatrix_8hpp.html  AdjacencyMatrix_8hpp_source.html  CMakeLists.txt  ConsoleLogger_8cpp.html  ConsoleLogger_8hpp.html  ConsoleLogger_8hpp_source.html  DefaultLogFormatter_8cpp.html  EdgeInputIterator_8hpp.html  EdgeInputIterator_8hpp_source.html  EdgeIterable_8hpp.html  EdgeIterable_8hpp_source.html  EdgeListEdgeReader_8cpp.html  EdgeListEdgeReader_8hpp.html  EdgeListEdgeReader_8hpp_source.html  EdgeList_8cpp.html  EdgeList_8hpp.html  EdgeList_8hpp_source.html  EdgeOutputIterator_8hpp.html  EdgeOutputIterator_8hpp_source.html  EdgeReader_8hpp.html  EdgeReader_8hpp_source.html  EdgeWriter_8hpp.html  EdgeWriter_8hpp_source.html  Edge_8hpp.html  Edge_8hpp_source.html  FileLogger_8hpp.html  FileLogger_8hpp_source.html  GraphEdgeWriter_8cpp.html  GraphEdgeWriter_8hpp.html  (+138 more)
.github/workflows/: main.yml
CMakeLists/: CMakeLists.executable.txt  CMakeLists.library.txt
data_structure/graph/: CMakeLists.txt
data_structure/graph/include/edge/: Edge.hpp  iterators.hpp
data_structure/graph/include/edge/iterators/: EdgeInputIterator.hpp  EdgeIterable.hpp  EdgeOutputIterator.hpp  readers.hpp  writers.hpp
data_structure/graph/include/edge/readers/: AdjacencyListEdgeReader.hpp  AdjacencyMatrixEdgeReader.hpp  EdgeAdjacencyListReader.hpp  EdgeListEdgeReader.hpp  EdgeReader.hpp  EdgeStreamReader.hpp  StreamEdgeReader.hpp
data_structure/graph/include/edge/writers/: EdgeWriter.hpp  GraphEdgeWriter.hpp  StreamEdgeWriter.hpp
data_structure/graph/include/edge_iterators/: EdgeInputIterator.hpp
data_structure/graph/include/graph/: AdjacencyList.hpp  AdjacencyMatrix.hpp  EdgeList.hpp  Graph.hpp  types.hpp
data_structure/graph/src/edge/: iterators.cpp
data_structure/graph/src/edge/readers/: AdjacencyListEdgeReader.cpp  AdjacencyMatrixEdgeReader.cpp  EdgeListEdgeReader.cpp
data_structure/graph/src/edge/writers/: StreamEdgeWriter.cpp
data_structure/graph/src/graph/: AdjacencyList.cpp  AdjacencyMatrix.cpp  EdgeList.cpp  Graph.cpp
data_structure/graph/test/: CMakeLists.txt
data_structure/graph/test/include/graphs/: AdjacencyListTest.hpp  GraphTest.hpp
data_structure/graph/test/include/readers/: EdgeStreamReader.hpp  EdgeStreamReaderTest.hpp
data_structure/graph/test/src/graphs/: test_AdjacencyList.cpp  test_AdjacencyMatrix.cpp  test_Graph.cpp
data_structure/graph/test/src/readers/: test_EdgeStreamReader.cpp  test_StreamEdgeReader.cpp
driver_program/edge_iterator_exec/: CMakeLists.txt
driver_program/edge_iterator_exec/src/: main.cpp
driver_program/graph_exec/: CMakeLists.txt
driver_program/graph_exec/src/: main.cpp
driver_program/logger_exec/: CMakeLists.txt
driver_program/logger_exec/src/: main.cpp
logging/: CMakeLists.txt
logging/include/logger/: LogEntry.hpp  Logger.hpp
logging/src/: Logger.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+39 more)
tests/edge_iterators/: BaseCase.txt  NegativeCount.txt
tests/graphs/: BaseCase.txt  NegativeNodes.txt  ZeroNode.txt
util/logger/: CMakeLists.txt
util/logger/include/: ConsoleLogger.hpp  FileLogger.hpp  LogEntry.hpp  LogLevel.hpp  LogManager.hpp  Logger.hpp
util/logger/include/formatter/: LogFormatter.hpp
util/logger/src/: ConsoleLogger.cpp  LogEntry.cpp  LogManager.cpp  Logger.cpp
util/logger/src/formatter/: DefaultLogFormatter.cpp
util/logger/test/: CMakeLists.txt
util/logger/test/include/: LoggerTest.hpp
util/logger/test/src/: test_ConsoleLogger.cpp
